# scop

./: .gitignore  CMakeLists.txt  Dependency.cmake  README.md
mathlib/: Common.cpp  Common.h  Mat2x2.cpp  Mat2x2.h  Mat3x3.cpp  Mat3x3.h  Mat4x4.cpp  Mat4x4.h  Value_ptr.cpp  Value_ptr.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
shader/: lighting.fs  lighting.vs  simple.fs  simple.vs
src/: Buffer.cpp  Buffer.h  Common.cpp  Common.h  Context.cpp  Context.h  Image.cpp  Image.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  VertexLayout.cpp  VertexLayout.h  main.cpp
